Default prompt is for energy drinks

--- a/Webpage.ipynb
+++ b/Webpage.ipynb
@@ -14,15 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "task: str = \"\"\"\\\n",
+    "A website that sells energy drinks called 'Boost'.\n",
+    "There are many different fruity flavours but the main one I want to sell is the red berry.\n",
     "\n",
-    "A website about video games, complete with a store, blog etc.\n",
+    "It should be saturated with red and have a modern, sleek design.\n",
+    "The website should include sections for product information, customer reviews,\n",
+    "and a blog about the benefits of energy drinks. It should also have a contact form and links to social media.\n",
     "\n",
+    "Make the UI responsive, and a single-page application (SPA).\n",
     "\"\"\"\n",
+    "# task: str = \"A website about video games, complete with a store, blog etc.\"\n",
     "# task: str = \"A website about cars.\"\n",
     "# task: str = \"Make a website about coffee.\"\n",
     "# task: str = \"Make a website about animals, such as the zoo or a safari.\"\n",
@@ -34,19 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ENABLE_BACKGROUND_IMAGE: bool = False\n",
+    "ENABLE_BACKGROUND_IMAGE: bool = True\n",
     "\n",
-    "ENABLE_SITE_IMAGES: bool = False\n",
+    "ENABLE_SITE_IMAGES: bool = True\n",
     "NUM_SITE_IMAGES: int = 3\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,12 +628,12 @@
    "outputs": [],
    "source": [
     "# Windows: Open webpage in browser\n",
-    "import webbrowser\n",
-    "webbrowser.open(webpage_path, new=1)\n",
+    "# import webbrowser\n",
+    "# webbrowser.open(webpage_path, new=1)\n",
     "\n",
     "# MacOS: Open webpage in browser\n",
-    "# import os\n",
-    "# os.system(f\"open {webpage_path}\")\n",
+    "import os\n",
+    "os.system(f\"open {webpage_path}\")\n",
     "\n",
     "# MacOS: Alternate method to open webpage in browser\n",
     "# import subprocess\n",
