--- a/Webpage_azure.ipynb
+++ b/Webpage_azure.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,17 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install -U pyautogen\n",
-    "# %pip install -U openai\n"
+    "pip install -U openai pyautogen autogen\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,12 +138,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List of OpenAI API configurations\n",
+    "# List of OpenAI API configurations (Azure OpenAI)\n",
     "config_list: list = autogen.config_list_from_json(\n",
     "    \"OAI_CONFIG_LIST\",\n",
     ")\n",
     "\n",
-    "apikey = config_list[0][\"api_key\"]\n",
+    "\n",
+    "#apikey = config_list[0][\"api_key\"]\n",
     "print(f\"Using {len(config_list)} OpenAI API configurations\")"
    ]
   },
@@ -157,29 +157,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = OpenAI(api_key=apikey)\n",
-    "model = \"dall-e-3\"\n"
+    "from openai import AzureOpenAI\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "# Azure OpenAI configuration\n",
+    "\n",
+    "\n",
+    "AZURE_OPENAI_ENDPOINT = config_list[0][\"base_url\"]\n",
+    "AZURE_OPENAI_API_KEY = config_list[0][\"api_key\"]\n",
+    "AZURE_DEPLOYMENT_NAME = config_list[0][\"model\"]\n",
+    "AZURE_OPENAI_VERSION = config_list[0][\"api_version\"]\n",
+    "\n",
+    "print(f\"Azure OpenAI Endpoint: {AZURE_OPENAI_ENDPOINT}\")\n",
+    "print(f\"Azure Deployment Name: {AZURE_DEPLOYMENT_NAME}\")\n",
+    "print(f\"Azure OpenAI Version: {AZURE_OPENAI_VERSION}\")\n",
+    "\n",
+    "#model = \"dall-e-3\"\n",
+    "\n",
+    "# Initialize Azure OpenAI client\n",
+    "client = AzureOpenAI(azure_endpoint=AZURE_OPENAI_ENDPOINT, azure_deployment=AZURE_DEPLOYMENT_NAME, api_version=AZURE_OPENAI_VERSION, api_key=AZURE_OPENAI_API_KEY)\n",
+    "\n",
+    "\n",
+    "#client = OpenAI(api_key=apikey)\n",
+    "#model = \"dall-e-3\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Update the `get_image_filename` function to use Azure OpenAI\n",
     "def get_image_filename(image_generation_prompt: str) -> str:\n",
-    "    \"\"\"Generate a filename based on the image generation prompt, using OpenAI\"\"\"\n",
+    "    \"\"\"Generate a filename based on the image generation prompt, using Azure OpenAI\"\"\"\n",
     "    prompt: str = f\"Generate a filename for an image based on the following prompt:\\n```{image_generation_prompt}```\\n\\nFilename: \"\n",
     "\n",
     "    response = client.chat.completions.create(\n",
     "        model=\"gpt-4o\",\n",
     "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant that generates filenames \"\n",
-    "                                          \"for images that were generated using the given prompt.\"},\n",
+    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant that generates filenames for images that were generated using the given prompt.\"},\n",
     "            {\"role\": \"user\", \"content\": prompt}\n",
     "        ],\n",
     "        max_tokens=20,\n",
@@ -188,7 +210,6 @@
     "\n",
     "    filename: str = response.choices[0].message.content.strip()\n",
     "    filename2 = '.'.join(filename.split('.')[:-1])  # Remove any file extension if present\n",
-    "    # Only allow alphanumeric characters, underscores, and dashes in the filename\n",
     "    filename3 = ''.join(c for c in filename2 if c.isalnum() or c in ('_', '-')).strip()\n",
     "    assert filename3, \"Filename cannot be empty.\\n\" + \\\n",
     "                      \"Raw response message: `\" + response.choices[0].message.content + \"`\\n\" + \\\n",
@@ -203,19 +224,24 @@
     "\n",
     "    return f\"{filename}_{number_suffix}.png\"\n",
     "\n",
-    "\n",
-    "def generate_image(image_generation_prompt: str, filename: str=None) -> str:\n",
-    "    \"\"\"Generate an image based on the prompt\"\"\"\n",
+    "# Update the `generate_image` function to use Azure OpenAI\n",
+    "def generate_image(image_generation_prompt: str, filename: str = None) -> str:\n",
+    "    \"\"\"Generate an image based on the prompt using Azure OpenAI\"\"\"\n",
     "    try:\n",
-    "        response = client.images.generate(prompt=image_generation_prompt,\n",
-    "                                        model=model,\n",
-    "                                        quality=\"standard\",\n",
-    "                                        response_format=\"b64_json\",\n",
-    "                                        size=\"1024x1024\")\n",
-    "    except BadRequestError as e:\n",
+    "        ## it should not be necessary\n",
+    "        client = AzureOpenAI(azure_endpoint=AZURE_OPENAI_ENDPOINT, azure_deployment=\"dall-e-3\", api_version=AZURE_OPENAI_VERSION, api_key=AZURE_OPENAI_API_KEY)\n",
+    "\n",
+    "        response = client.images.generate(\n",
+    "            model=\"dall-e-3\",\n",
+    "            prompt=image_generation_prompt,\n",
+    "            size=\"1024x1024\",\n",
+    "            response_format=\"b64_json\"\n",
+    "        )\n",
+    "    except Exception as e:\n",
     "        print(f\"Error generating image: {e}\")\n",
     "        return\n",
-    "    img_data =  response.data[0].b64_json\n",
+    "\n",
+    "    img_data = response.data[0].b64_json\n",
     "    img_bytes = base64.b64decode(img_data)\n",
     "\n",
     "    if not filename:\n",
@@ -223,19 +249,11 @@
     "\n",
     "    print(f\"Saving image as: `{filename}`...\")\n",
     "    with open(os.path.join('generated_images', filename), 'wb') as handler:\n",
-    "        handler.write(img_bytes)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate new images that can be used on the webpage\n",
+    "        handler.write(img_bytes)\n",
+    "\n",
+    "# Update the `get_website_background_image_prompt` function to use Azure OpenAI\n",
     "def get_website_background_image_prompt(task: str) -> str:\n",
-    "    \"\"\"Generate a prompt for the background image of the website\"\"\"\n",
-    "    # prompt: str = f\"Provide a prompt for the background image of a website about:\\n```{task}```\\n\\nPrompt: \"\n",
+    "    \"\"\"Generate a prompt for the background image of the website using Azure OpenAI\"\"\"\n",
     "    prompt: str = f\"What can be shown on the background of a website about:\\n```{task}```\\n\\nPrompt: \"\n",
     "\n",
     "    system_prompt: str = \"\"\"\\\n",
@@ -253,18 +271,30 @@
     "            {\"role\": \"user\", \"content\": prompt}\n",
     "        ],\n",
     "        max_tokens=50,\n",
-    "        temperature=1.5,\n",
-    "        seed=randint(0, 1000000)  # Random seed to force different prompts each time\n",
+    "        temperature=1.5\n",
     "    )\n",
     "\n",
     "    return response.choices[0].message.content.strip()\n",
     "\n",
-    "\n",
+    "print(\"done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Background image for the webpage\n",
     "if ENABLE_BACKGROUND_IMAGE:\n",
-    "    background_image_prompt: str = get_website_background_image_prompt(task)\n",
-    "    print(f\"Background image prompt: {background_image_prompt}\")\n",
-    "    generate_image(image_generation_prompt=background_image_prompt, filename='background.png')\n"
+    "    # Background image for the webpage\n",
+    "    if ENABLE_BACKGROUND_IMAGE:\n",
+    "        background_image_prompt: str = get_website_background_image_prompt(task)\n",
+    "        print(f\"Background image prompt: {background_image_prompt}\")\n",
+    "        try:\n",
+    "            generate_image(image_generation_prompt=background_image_prompt, filename='background.png')\n",
+    "        except AttributeError as e:\n",
+    "            print(f\"Error: {e}. Ensure the AzureOpenAI client is correctly configured.\")\n"
    ]
   },
   {
@@ -308,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +353,10 @@
     "                       if image.endswith((\".jpg\", \".jpeg\", \".png\"))]\n",
     "    return default_images + generate_images\n",
     "\n",
-    "image_filenames = list_available_images()\n"
+    "image_filenames = list_available_images()\n",
+    "\n",
+    "\n",
+    "print(f\"Image file names: {image_filenames}\")\n"
    ]
   },
   {
@@ -335,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +539,9 @@
     "\"\"\"\n",
     "    \n",
     "if ENABLE_BACKGROUND_IMAGE:\n",
-    "    system_prompt += \"\\nUse the background.png image as the background for the website, with a transparency of 50%.\"\n"
+    "    system_prompt += \"\\nUse the background.png image as the background for the website, with a transparency of 50%.\"\n",
+    "\n",
+    "print(images_list_str)"
    ]
   },
   {
@@ -538,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,6 +676,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean up files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "def delete_files_in_folder(folder_path: str):\n",
+    "    \"\"\"Delete all files in the specified folder.\"\"\"\n",
+    "    if os.path.exists(folder_path):\n",
+    "        for file_name in os.listdir(folder_path):\n",
+    "            file_path = os.path.join(folder_path, file_name)\n",
+    "            if os.path.isfile(file_path):\n",
+    "                os.remove(file_path)\n",
+    "                print(f\"Deleted: {file_path}\")\n",
+    "    else:\n",
+    "        print(f\"Folder does not exist: {folder_path}\")\n",
+    "\n",
+    "# Paths to the folders\n",
+    "generated_images_folder = \"generated_images\"\n",
+    "output_folder = \"output\"\n",
+    "\n",
+    "# Delete files in the folders\n",
+    "delete_files_in_folder(generated_images_folder)\n",
+    "delete_files_in_folder(output_folder)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -652,7 +722,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "autogen_env",
+   "display_name": "training",
    "language": "python",
    "name": "python3"
   },
@@ -666,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
