--- a/Webpage_azure.ipynb
+++ b/Webpage_azure.ipynb
@@ -126,10 +126,14 @@
     "import os\n",
     "import time\n",
     "import base64\n",
-    "import autogen\n",
+    "\n",
     "from openai import OpenAI, BadRequestError\n",
     "from random import randint\n",
-    "from autogen.agentchat import UserProxyAgent, AssistantAgent\n"
+    "from autogen_agentchat.agents import AssistantAgent\n",
+    "from autogen_agentchat.teams import RoundRobinGroupChat\n",
+    "from autogen_agentchat.conditions import TextMentionTermination, MaxMessageTermination\n",
+    "from autogen_agentchat.messages import TextMessage\n",
+    "from autogen_ext.models.openai import AzureOpenAIChatCompletionClient\n"
    ]
   },
   {
@@ -139,13 +143,40 @@
    "outputs": [],
    "source": [
     "# List of OpenAI API configurations (Azure OpenAI)\n",
-    "config_list: list = autogen.config_list_from_json(\n",
-    "    \"OAI_CONFIG_LIST\",\n",
+    "import json\n",
+    "\n",
+    "with open(\"OAI_CONFIG_LIST\", \"r\") as f:\n",
+    "    config_list: list = json.load(f)\n",
+    "\n",
+    "print(f\"Using {len(config_list)} OpenAI API configurations\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create model clients for the agents\n",
+    "coder_model_client = AzureOpenAIChatCompletionClient(\n",
+    "    azure_endpoint=config_list[0][\"base_url\"],\n",
+    "    api_key=config_list[0][\"api_key\"],\n",
+    "    api_version=config_list[0][\"api_version\"],\n",
+    "    model=config_list[0][\"model\"],\n",
+    "    azure_deployment=config_list[0][\"model\"],\n",
+    "    temperature=0.1,\n",
     ")\n",
     "\n",
+    "critic_model_client = AzureOpenAIChatCompletionClient(\n",
+    "    azure_endpoint=config_list[0][\"base_url\"],\n",
+    "    api_key=config_list[0][\"api_key\"],\n",
+    "    api_version=config_list[0][\"api_version\"],\n",
+    "    model=config_list[0][\"model\"],\n",
+    "    azure_deployment=config_list[0][\"model\"],\n",
+    "    temperature=0.3,\n",
+    ")\n",
     "\n",
-    "#apikey = config_list[0][\"api_key\"]\n",
-    "print(f\"Using {len(config_list)} OpenAI API configurations\")"
+    "print(\"Model clients created successfully\")\n"
    ]
   },
   {
@@ -372,11 +403,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For User Proxy Agents\n",
-    "code_execution_config: bool = False\n",
-    "\n",
-    "def is_termination_msg(msg: dict) -> bool:\n",
-    "    return \"TERMINATE\" in msg[\"content\"]\n"
+    "# Termination condition for the team\n",
+    "termination_condition = MaxMessageTermination(max_messages=MAX_MESSAGES) | TextMentionTermination(\"TERMINATE\")\n"
    ]
   },
   {
@@ -393,7 +421,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agents: list = []"
+    "# We'll store agents in a list to pass to the team\n",
+    "participants = []\n"
    ]
   },
   {
@@ -404,16 +433,12 @@
    "source": [
     "coder = AssistantAgent(\n",
     "    name=\"Coder\",\n",
+    "    model_client=coder_model_client,\n",
     "    system_message=coder_system_message,\n",
-    "    llm_config={\n",
-    "        \"config_list\": config_list,\n",
-    "        \"cache_seed\": None,\n",
-    "        \"temperature\": 0.1,\n",
-    "        \"timeout\": 600,\n",
-    "    },\n",
     ")\n",
     "\n",
-    "agents.append(coder)\n"
+    "participants.append(coder)\n",
+    "print(f\"Created agent: {coder.name}\")\n"
    ]
   },
   {
@@ -424,16 +449,12 @@
    "source": [
     "critic = AssistantAgent(\n",
     "    name=\"Critic\",\n",
+    "    model_client=critic_model_client,\n",
     "    system_message=critic_system_message,\n",
-    "    llm_config={\n",
-    "        \"config_list\": config_list,\n",
-    "        \"cache_seed\": None,\n",
-    "        \"temperature\": 0.3,\n",
-    "        \"timeout\": 600,\n",
-    "    },\n",
     ")\n",
     "\n",
-    "agents.append(critic)"
+    "participants.append(critic)\n",
+    "print(f\"Created agent: {critic.name}\")\n"
    ]
   },
   {
@@ -449,16 +470,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The User Proxy Agent starts the conversation\n",
-    "user_proxy = UserProxyAgent(\n",
-    "    name=\"user_proxy\",\n",
-    "    system_message=\"A human admin.\",\n",
-    "    human_input_mode=\"NEVER\",\n",
-    "    is_termination_msg=is_termination_msg,\n",
-    "    code_execution_config=code_execution_config,\n",
-    "    default_auto_reply=\"\",\n",
-    "    max_consecutive_auto_reply=MAX_MESSAGES,\n",
-    ")\n"
+    "# Note: UserProxyAgent in the new API doesn't require the same configuration\n",
+    "# The team will handle message routing automatically\n",
+    "print(f\"Total participants: {len(participants)}\")\n"
    ]
   },
   {
@@ -475,8 +489,8 @@
    "outputs": [],
    "source": [
     "print(\"Chat participants:\")\n",
-    "for agent in agents:\n",
-    "    print(f\" - {agent.name} ({agent.__module__.split('.')[-1]})\")\n"
+    "for agent in participants:\n",
+    "    print(f\" - {agent.name}\")\n"
    ]
   },
   {
@@ -485,25 +499,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "groupchat = autogen.GroupChat(\n",
-    "    agents=agents,\n",
-    "    messages=[],\n",
-    "    speaker_selection_method=\"round_robin\",\n",
-    "    allow_repeat_speaker=False,\n",
-    "    max_round=MAX_MESSAGES,\n",
+    "# Create the RoundRobinGroupChat team\n",
+    "team = RoundRobinGroupChat(\n",
+    "    participants=participants,\n",
+    "    termination_condition=termination_condition,\n",
     ")\n",
     "\n",
-    "groupchatmanager = autogen.GroupChatManager(\n",
-    "    name=\"chat_manager\",\n",
-    "    groupchat=groupchat,\n",
-    "    is_termination_msg=is_termination_msg,\n",
-    "    llm_config={\n",
-    "        \"config_list\": config_list,\n",
-    "        \"cache_seed\": None,\n",
-    "        \"temperature\": 0.2,\n",
-    "        \"timeout\": 300,\n",
-    "    },\n",
-    ")\n"
+    "print(f\"Created RoundRobinGroupChat team with {len(participants)} participants\")\n"
    ]
   },
   {
@@ -558,10 +560,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_proxy.initiate_chat(\n",
-    "    groupchatmanager,\n",
-    "    message=system_prompt,\n",
-    ")"
+    "# Run the team with the system prompt\n",
+    "import asyncio\n",
+    "\n",
+    "async def run_team():\n",
+    "    result = await team.run(task=system_prompt)\n",
+    "    return result\n",
+    "\n",
+    "# Run the async function\n",
+    "result = await run_team()\n",
+    "print(\"\\nConversation completed!\")\n"
    ]
   },
   {
@@ -588,17 +596,29 @@
     "</body>\n",
     "\"\"\"\n",
     "\n",
-    "def extract_html_from_message(message: str) -> str:\n",
-    "        start_delimiter = \"```html\"\n",
-    "        end_delimiter = \"```\"\n",
-    "        start_index = message.find(start_delimiter)\n",
-    "        end_index = message.find(end_delimiter, start_index + len(start_delimiter))\n",
-    "        return message[start_index + len(start_delimiter):end_index]\n",
+    "def extract_html_from_message(message_content: str) -> str:\n",
+    "    start_delimiter = \"```html\"\n",
+    "    end_delimiter = \"```\"\n",
+    "    start_index = message_content.find(start_delimiter)\n",
+    "    if start_index == -1:\n",
+    "        return None\n",
+    "    end_index = message_content.find(end_delimiter, start_index + len(start_delimiter))\n",
+    "    if end_index == -1:\n",
+    "        return None\n",
+    "    return message_content[start_index + len(start_delimiter):end_index]\n",
     "\n",
+    "# Extract HTML from the result messages\n",
+    "if hasattr(result, 'messages'):\n",
+    "    for message in result.messages:\n",
+    "        if hasattr(message, 'content') and isinstance(message.content, str):\n",
+    "            if \"```html\" in message.content:\n",
+    "                extracted = extract_html_from_message(message.content)\n",
+    "                if extracted:\n",
+    "                    webpage_content = extracted\n",
+    "                    print(f\"Found HTML in message from: {message.source if hasattr(message, 'source') else 'unknown'}\")\n",
+    "                    break\n",
     "\n",
-    "for message in groupchat.messages:\n",
-    "        if \"```html\" in message[\"content\"]:\n",
-    "            webpage_content = extract_html_from_message(message[\"content\"])"
+    "print(f\"Webpage content length: {len(webpage_content)} characters\")\n"
    ]
   },
   {
@@ -722,7 +742,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "training",
+   "display_name": ".venv (3.14.0)",
    "language": "python",
    "name": "python3"
   },
@@ -736,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
